development/react-nginx.yml
# ------------ DEPLOYMENT ------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-nginx
  labels:
    app: react-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-nginx
  template:
    metadata:
      labels:
        app: react-nginx
    spec:
      containers:
        - name: react-nginx
          image: logicalogbonna/react-nginx:1.0.0
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
---
# ------------ SERVICE ------------
apiVersion: v1
kind: Service
metadata:
  name: react-nginx-service
  labels:
    app: react-nginx-service
spec:
  selector:
    app: react-nginx
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
